modificacion DB configuration